--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,10 +5,8 @@ services:
     build:
       context: ./services/users
       dockerfile: Dockerfile-dev
-    volumes:
-      - './services/users:/usr/src/app'
-    ports:
-      - 5000:5000
+    expose:
+      - '5000'
     environment:
 #      - FLASK_APP=project/__init__.py
       - FLASK_DEBUG=1
@@ -30,3 +28,13 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+  nginx:
+    container_name: nginx
+    build:
+      ./services/nginx
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - users
