--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,9 @@ Jinja2 = "==2.11.3"
 MarkupSafe = "==1.1.1"
 SQLAlchemy = "==1.3.22"
 Werkzeug = "==1.0.1"
+flake8 = "==3.9.0"
+Flask-DebugToolbar = "==0.11.0"
+Flask-Cors = "==3.0.10"
 
 [dev-packages]
 
