--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -38,3 +38,22 @@ services:
       - 80:80
     depends_on:
       - users
+      - client
+
+  client:
+    container_name: client
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile-dev
+    volumes:
+      - '/app/node_modules'
+    ports:
+      - '3007:3000'
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    stdin_open: true
+    depends_on:
+      - users
+    links:
+      - users
